--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <title>Welcome To Indian Shatabdi News</title>
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./News-App/style.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="./inde.js"></script>
+  <script src="./News-App/inde.js"></script>
   
 </body>
 
